--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -16,8 +16,8 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 <html>
-<head><title>Apache Sqoop</title></head>
-<body>
-Apache Sqoop
-</body>
+  <head><title>Apache Sqoop Server</title></head>
+  <body>
+    Apache Sqoop Server
+  </body>
 </html>
